# multiple-cointegration-backtesting

./: CMakeLists.txt  build.sh  conanfile.txt
.cache/clangd/index/: main.cpp.2E9F0D303BB3EF12.idx
data/: Bitfinex_BTCUSD_d.csv  Bitfinex_ETHUSD_d.csv  gld.csv  slv.csv  test_data.csv  test_data2.csv
include/: arena.hpp  csv_parser.hpp  definitions.hpp  fast_cast.hpp  parser.hpp  types.hpp
include/math/: johansen_test.hpp
include/profiling/: profiler.hpp  rep_tester.hpp  timer.hpp
src/: arena.cpp  csv_parser.cpp  main.cpp
src/math/: johansen_test.cpp
src/profiling/: profiler.cpp  timer.cpp
test/: critical_values.py  test_johansen.py
